# secure_update

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
secure_update/: auditor.py  cli.py  models.py  scanner.py  timeutil.py  upgrader.py
tests/: test_auditor.py  test_models.py  test_scanner.py  test_timeutil.py  test_upgrader.py
tests/fixtures/m3l/: pyproject.toml
