[project]
name = "secure-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Völgyes", email = "david.volgyes@ieee.org" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "packaging>=24.0",
    "tqdm>=4.67.3",
]

[project.scripts]
secure-update = "secure_update.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "secure_update"
module-root = ""

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
]
