[project]
name = "m3l"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "colorspace>=1.0.0",
    "diskcache~=5.6.3",
    "einops~=0.8",
    "fiona>=1.10.1",
    "geopandas~=1.0.1",
    "imageio~=2.36",
    "ipython>=9.0.2",
    "jakteristics>=0.6.2",
    "laspy[lazrs]~=2.5.4",
    "litellm>=1.54.1",
    "llm4shell>=0.4.0",
    "loguru>=0.7.0",
    "matplotlib>=3.10.0",
    "mobile-sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
    "numpy>2.0,<3.0",
    "oauthlib",
    "onnxruntime-gpu>=1.20.1",
    "open3d>=0.19.0",
    "openai>=1.63.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.2",
    "piexif>=1.1.3",
    "pillow~=11.0",
    "plotly>=5.24.1",
    "pydantic>=2.10.6",
    "pykeops>=2.2.3",
    "python-magic>=0.4.27",
    "rasterio~=1.4.3",
    "requests>=2.32.3",
    "ruamel-yaml~=0.18",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "scikit-image~=0.24",
    "scipy>=1.14",
    "timm>=1.0.14",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm~=4.65",
    "transformers~=4.49",
    "whitebox>=2.3.6",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

[tool.uv]
package = false
